--- a/src/main/webapp/jquery/show.css
+++ b/src/main/webapp/jquery/show.css
@@ -115,6 +115,26 @@
     font-weight: normal;
 }
 
+.foot span{
+    line-height: 35px;
+    text-align: center;
+    color:#272727;
+    padding-left: 57px;
+    font-size: 14px;
+    font-family: '等线 (正文)','Courier New', Courier, monospace;;
+}
+
+.foot{
+    margin: 0 auto;
+    width: 1340px;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-color: #d9d9d9;
+    height: 35px;
+    line-height: 35px;
+    background-color: white;
+}
+
 .Content{
     border: 1px solid;
     border-color: #d9d9d9;
@@ -128,12 +148,12 @@
     position: fixed;
     display: flex;
     flex-direction: column;
-    right: 8px;
-    bottom: 30px;
-    z-index: 2;
+    right: 16px;
+    bottom: 80px;
+    z-index: 10;
     padding: 3px 3px 0 3px;
     border-radius: 3px;
     border: 1px solid #ddd;
     background: #fff;
-    width: 20px;
+    width: 150px;
 }
