--- a/src/main/webapp/jquery/Website.css
+++ b/src/main/webapp/jquery/Website.css
@@ -85,7 +85,7 @@
     float:left;
     position: absolute;
     font-size: 20px;
-    line-height: 61px;
+    line-height: 20px;
     font-weight: bold;
     font-family: '微软雅黑','Courier New', Courier, monospace;
 }
@@ -148,12 +148,11 @@ input {
 }
 
 .foot{
-    margin-left:350px;
+    text-align: center;
     border-top: 1px solid;
     border-bottom: 1px solid;
     border-color: #d9d9d9;
     height: 35px;
-    width:850px;
     line-height: 35px;
 }
 
