--- a/src/main/webapp/jquery/Website.css
+++ b/src/main/webapp/jquery/Website.css
@@ -5,11 +5,11 @@
 
 @font-face {
     font-family: "Soho Gothic";
-    src: url("../font/SOHO_GOTHIC.TTF");
+    src: url("../font/Soho_Gothic.TTF");
 }
 
 body {
-    font-family: '汉仪旗黑Y2-75W', 'Soho Gothic', Courier, monospace;
+    font-family:'Soho Gothic','汉仪旗黑Y2-75W', Courier, monospace;
 }
 
 .Wrapper {
